# majsoulrpa

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  THIRD-PARTY-NOTICES.md  levena-memo.md  pyproject.toml
docs/: conf.py  index.rst  majsoulrpa.presentation.rst  majsoulrpa.rst  modules.rst
docs/source/: conf.py  index.rst
docs/source/apis/: majsoulrpa.client.rst  majsoulrpa.config.rst  majsoulrpa.yostar_login.rst
examples/: config.example.toml  config.list.example.toml  config_example.toml  config_list_example.toml  create_room.py  enter_tournament.py  join_room.py  join_room_restore.py  login_imap.py  login_manual.py  login_s3.py  moqie.py  moqie3.py  moqie_3player.py  rejoin_room.py  skip.py  skip_after_lizhi.py
remote_browser/: __main__.py
src/majsoulrpa/: __init__.py  _rpa.py  config.py  player.py  rpa.py  timeout.py  yostar_login.py
src/majsoulrpa/_config/: authentication_imap.json  authentication_s3.json  browser.json  port.json  schema.json
src/majsoulrpa/_impl/: __init__.py  browser.py  db_client.py  db_server.py  grpc_client.py  grpc_server.py  message_queue_client.py  template.py  zmq_client.py
src/majsoulrpa/_impl/grpcserver/: grpcserver.proto  grpcserver_pb2.py  grpcserver_pb2.pyi  grpcserver_pb2_grpc.py
src/majsoulrpa/_impl/id/: __init__.py  character.py  level.py
src/majsoulrpa/_impl/mitmproxy/: sniffer.py
src/majsoulrpa/_impl/protobuf_grpc/: __init__.py  grpcserver.proto  grpcserver_pb2.py  grpcserver_pb2.pyi  grpcserver_pb2_grpc.py
src/majsoulrpa/_impl/protobuf_liqi/: liqi.json  liqi.proto  liqi_pb2.py  liqi_pb2.pyi
src/majsoulrpa/_majsoul_internal/id/: __init__.py  character.py  level.py
src/majsoulrpa/_mitmproxy/: __init__.py  sniffer.py
src/majsoulrpa/_remote_browser/: remote_browser.py
src/majsoulrpa/client/: __init__.py  _browser.py  _message_queue_client.py  _validation.py  _zmq_client.py
src/majsoulrpa/client/_mitmproxy/: __init__.py  sniffer.py
src/majsoulrpa/common/: __init__.py  _common.py  common.py  player.py  timeout.py  validation.py
src/majsoulrpa/config/: __init__.py  _config.py  authentication_imap.json  authentication_s3.json  browser.json  config.py  port.json  schema.json
src/majsoulrpa/config/_schema/: __init__.py  _browser.py  _port.py
src/majsoulrpa/config/_schema/_authentication/: __init__.py  _imap.py
src/majsoulrpa/config/schema/: __init__.py
src/majsoulrpa/config/schema/_authentication/: _imap.py  _s3.py
src/majsoulrpa/presentation/: __init__.py  _presentation_creator.py  _template.py  auth.py  exceptions.py  home.py  login.py  presentation_base.py  presentation_creator.py  tournament.py
src/majsoulrpa/presentation/match/: __init__.py  _common.py  match.py  operation.py  state.py
src/majsoulrpa/presentation/match/event/: __init__.py  _base.py  angangjiagang.py  babei.py  chipenggang.py  dapai.py  hule.py  liuju.py  new_round.py  no_tile.py  zimo.py
src/majsoulrpa/presentation/room/: __init__.py  base.py  guest.py  host.py  owner.py
src/majsoulrpa/presentation/tournament/: __init__.py  lobby.py
src/majsoulrpa/remote_browser/: __init__.py  _remote_browser.py
src/majsoulrpa/template/auth/: confirm.toml  login.toml  marker.toml  unavailable.toml
src/majsoulrpa/template/home/: accumulated_sign_in_rewards_confirm.toml  accumulated_sign_in_rewards_confirm_202404.toml  accumulated_sign_in_rewards_sign_in.toml  accumulated_sign_in_rewards_sign_in_202404.toml  create_room.toml  event_close.toml  jade.toml  join_room.toml  join_room_error.toml  mail_close.toml  marker0.toml  marker1.toml  marker2.toml  marker3.toml  tournament_lobby.toml
src/majsoulrpa/template/home/room_creation/: 1_game.toml  3-player.toml  4-player.toml  create.toml  east_only.toml  two-wind_match.toml  vs_ai.toml
src/majsoulrpa/template/home/room_join/: confirm.toml  error_close.toml
src/majsoulrpa/template/home/tournament_lobby/: confirm.toml  enter_tournament_id.toml  error_close.toml  leave.toml  marker.toml
src/majsoulrpa/template/login/: marker.toml
src/majsoulrpa/template/match/: chi.toml  liuju.toml  marker0.toml  marker1.toml  marker2.toml  marker3.toml  match_result_confirm.toml  no_tile_confirm.toml  skip.toml
src/majsoulrpa/template/room/: add_ai.toml  add_ai0.toml  add_ai1.toml  add_ai2.toml  add_ai3.toml  cancel.toml  leave.toml  marker.toml  ready.toml  start.toml  start_disabled.toml
src/majsoulrpa/template/tournament/: marker.toml  match_has_ended.toml  match_hasnt_started.toml  prepare_for_match.toml  waiting_to_start.toml
src/majsoulrpa/template/tournament/lobby/: confirm.toml
src/majsoulrpa/yostar_login/: __init__.py  _base.py  _imap.py  _s3.py  _yostar_login.py  base.py  imap.py  s3.py
src/majsoulrpa_remote_browser/: __main__.py
tests/: test_player.py
tests/common/: test_player.py
tests/config/: test_config.py
tests/test_presentation/: test_auth.py  test_match.py
tests/test_presentation/match/: test_state.py
