[project]
name = "majsoulrpa"
version = "0.0.1"
description = "A Robotic Process Automation (RPA) framework for Mahjong Soul (雀魂)"
authors = [
    { name = "Apricot S." }
]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">= 3.11"
keywords = ["mahjong", "Mahjong Soul", "Majsoul", "automation", "RPA"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "imapclient>=3.0.1,<4",
    "mitmproxy>=10.3.0,<11",
    "opencv-python>=4.9.0.80,<5",
    "playwright>=1.40.0,<2",
    "protobuf>=5.26.1,<6",
    "jsonschema>=4.20.0,<5",
    "boto3>=1.34.11,<2",
    "pyzmq>=26.0.0,<27",
    "referencing>=0.35.0,<0.36",
    "numpy>=2.0.0,<3",
    "wsproto>=1.2.0,<2",
]

[project.scripts]
majsoulrpa_remote_browser = "majsoulrpa.remote_browser._remote_browser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0,<2",
    "ruff>=0.5.0,<0.6",
    "types-protobuf>=5.26.0.20240422,<6",
    "types-jsonschema>=4.20.0.0,<5",
    "boto3-stubs[s3]>=1.34.11,<2",
    "pytest>=8.0.1,<9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/majsoulrpa"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src"]
extend-exclude = ["src/majsoulrpa/_impl/protobuf_liqi"]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", # pydocstyle

    # "C901",    # complex-structure
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"./examples/*" = ["S101", "INP001", "T201", "TRY004"]
"./tests/*" = ["S101", "SLF001"]
